fix z-index

--- a/app/assets/stylesheets/_chosen.scss
+++ b/app/assets/stylesheets/_chosen.scss
@@ -26,7 +26,7 @@
     	font-weight: normal;
 	}
 	.chosen-container-active.chosen-with-drop {
-		z-index: 1;
+		z-index: 2;
 	    position: absolute;
 	    width: 350px !important;
 	    background: #fff;
